# fruently

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  LICENSE  README.md  appveyor.yml  build.rs  rustfmt.toml  search-index.js
benchmarks/: Cargo.toml  LICENSE  README.md
benchmarks/src/: lib.rs
conf/: in_forward.conf
examples/: crossbeam_thread.rs  forward.rs  main.rs  store_file.rs  thread.rs
fruently/: index.html  sidebar-items.js
fruently/dumpable/: Dumpable.t.html  index.html  sidebar-items.js  trait.Dumpable.html
fruently/error/: enum.FluentError.html  index.html  sidebar-items.js
fruently/event_record/: EventRecord.t.html  index.html  sidebar-items.js  struct.Event.html  struct.EventRecord.html
fruently/event_time/: index.html  sidebar-items.js  struct.EventTime.html
fruently/fluent/: Fluent.t.html  enum.FluentError.html  index.html  sidebar-items.js  struct.Fluent.html
fruently/forwardable/: Entry.t.html  Forwardable.t.html  JsonForwardable.t.html  MsgpackForwardable.t.html  index.html  sidebar-items.js  trait.Forwardable.html  trait.JsonForwardable.html  trait.MsgpackForwardable.html  type.Entry.html
fruently/forwardable/forward/: index.html  sidebar-items.js  struct.Forward.html
fruently/forwardable/json/: index.html
fruently/forwardable/msgpack/: index.html  struct.Message.html
fruently/record/: FluentError.t.html  enum.FluentError.html  index.html  sidebar-items.js  struct.Record.html
fruently/retry_conf/: RetryConf.t.html  index.html  sidebar-items.js  struct.RetryConf.html
fruently/store_buffer/: fn.maybe_write_events.html  fn.maybe_write_record.html  fn.maybe_write_records.html  index.html  maybe_write_events.v.html  maybe_write_record.v.html  maybe_write_records.v.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/fruently/dumpable/: trait.Dumpable.js
implementors/fruently/forwardable/: trait.Forwardable.js  trait.MsgpackForwardable.js
implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
slide/: 20160408-slide.tex
src/: error.rs  event_record.rs  event_time.rs  fluent.rs  lib.rs  record.rs  retry_conf.rs  store_buffer.rs
src/dumpable/: mod.rs
src/forwardable/: forward.rs  json.rs  mod.rs  msgpack.rs
src/fruently/: error.rs.html  event_record.rs.html  event_time.rs.html  fluent.rs.html  lib.rs.html  record.rs.html  retry_conf.rs.html  store_buffer.rs.html
src/fruently/dumpable/: mod.rs.html
src/fruently/forwardable/: forward.rs.html  json.rs.html  mod.rs.html  msgpack.rs.html
src/fruently/src/: fluent.rs.html  lib.rs.html  record.rs.html  retry_conf.rs.html  store_buffer.rs.html
src/fruently/src/forwardable/: forward.rs.html  (+3 more)
tests/: skeptic.rs
