[package]
name = "fruently"
version = "0.8.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "A yet another Fluentd logger for Rust."
license-file = "LICENSE"
repository = "https://github.com/cosmo0920/fruently"
build = "build.rs"

[features]
fluentd = []
readme-testing = ["skeptic"]
dev = ["clippy"]

[build-dependencies.skeptic]
version = "~0.4"
default-features = false

[dev-dependencies.skeptic]
version = "~0.4"
default-features = false

[dependencies]
skeptic = {version = "~0.4", optional = true}
time = "~0.1.34"
retry = "~0.4.0"
serde = "~0.9.0"
serde_json = "~0.9.0"
serde_derive = "~0.9.0"
rmp = "~0.8.0"
rmp-serde = "~0.12.0"
clippy = {version = '0.0.116', optional = true}

[dev-dependencies]
tempdir = "~0.3"