[package]
name = "fruently"
version = "0.10.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
description = "A yet another Fluentd logger for Rust."
license-file = "LICENSE"
repository = "https://github.com/cosmo0920/fruently"
build = "build.rs"
edition = "2018"

[features]
fluentd = []
readme-testing = ["skeptic"]
time-as-integer = []
parallel-example = ["crossbeam-utils"]

[build-dependencies.skeptic]
version = "~0.9"
default-features = false

[dev-dependencies.skeptic]
version = "~0.9"
default-features = false

[dependencies]
skeptic = {version = "~0.9", optional = true}
time = "~0.1.34"
retry = "~0.4.0"
serde = "~1.0.0"
serde_json = "~1.0.0"
serde_derive = "~1.0.0"
rmp = "~0.8.0"
rmp-serde = "~0.13.0"
byteorder = "^1.0.0"
crossbeam-utils = {version = "~0.6", optional = true}
dirs = "~2.0"

[dev-dependencies]
failure = "~0.1.1"
tempdir = "~0.3"
