[package]
name = "fruently_benchmarks"
version = "0.2.0"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
publish = false

[features]
dev = ["clippy"]

[dependencies.fruently]
version = "~0.8.0"
path = "../../fruently"

[dependencies]
time = "~0.1.34"
rust_fluent = "~0.3.0"
clippy = {version = '0.0.67', optional = true}
